--- a/app/src/main/res/values-ru/Strings.xml
+++ b/app/src/main/res/values-ru/Strings.xml
@@ -11,4 +11,6 @@
     <string name="remove">Удалить</string>
     <string name="post_text">Текст поста</string>
     <string name="error_empty_content">Контент не может быть пустым</string>
+    <string name="editing_post">Редактирование</string>
+    <string name="cancel">отмена</string>
 </resources>
