--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="error_empty_content">Content can\'t be empty</string>
     <string name="editing_post">Editing</string>
     <string name="cancel">cancel</string>
+    <string name="chooser_share_post">Share post</string>
+    <string name="add_post">Add post</string>
+    <string name="enter_url">Enter URL</string>
 </resources>
